--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -500,5 +500,280 @@ var5+var4 是新值
 
 
 
+1. NIO的底层实现。
 
+2. JVM基础（必问），JVM GC原理，JVM怎么实现回收内存。
+
+3. 线程池原理是怎样的？
+
+4. 锁的机制升降级。
+
+5. Dubbo原理、以及序列化等相关问题。
+
+6. Dubbo如何一条链接并发多个调用。
+
+7. 说说你对分布式事务一致性的理解。
+
+8. 从系统层面考虑，分布式应该考虑哪些纬度。
+
+9. 微信红包的实现原理。
+
+10. 海量数据分析怎样实现。
+
+11. API接口（提供给他人使用）与SDI接口的区别是什么。
+
+12. 如何实现Hadoop底层（天猫）
+
+13. threadLocal，线程池，hashMap/hashTable/coccurentHashMap等（天猫）
+
+14. 谈谈如何设计秒杀系统。
+
+15. 虚拟机、IO等相关知识点。
+
+16. Linux命令。
+
+17. 一个整形数组，给定一个数，在数组中找出两个数的和等于这个数，并打印出来，我写的时间复杂度高，要求O(n)。
+
+18. n个整数，找出连续的m个数加和是最大。
+
+19. 开源技术了解多少。
+
+20. 1000个线程同时运行，怎么防止不卡。
+
+21. 并列的并发消费问题。
+
+22. 大量高并发量情况下，如何处理热点、数据等。
+
+23. 如何获取一个本地服务器上可用的端口。
+
+24. 流量控制相关问题。
+
+25. 数据库TPS是多少。
+
+26. 数据库锁隐的原理。
+
+27. 分布式锁、Redis缓存，Spring aop，系统架构图，MySQL的特性。
+
+28. 缓存击穿的解决方案有哪些。
+
+29. Java怎么挖取回收器相关原理。
+
+30. Java集合都有哪些，以及其特点是什么。
+
+31. 高并发场景相关题目：同时给10万个人发工资，你会怎么去设计并发方案，以确保在1分钟内全部发完，打个比方会提出类似的场景。
+
+32. Java事件机制包括哪三个部分？分别介绍下。
+
+33. 使用线程池的原因？
+
+34. 线程池的作用有哪些？
+
+35. 几种常见的线程池及其各自的使用场景是怎样的。
+
+36. 线程池都有哪几种工作队列？
+
+37. 怎么理解无界队列和有界队列？
+
+38. 线程池中的几种重要的参数及流程说明。
+
+39. 什么是反射机制？
+
+40. 说说反射机制的作用。
+
+41. 反射机制会不会有性能问题？
+
+42. 你怎么理解http协议？
+
+43. 说说http协议的工作流程。
+
+44. http有哪些请求提交方式？
+
+45. http中的200,302,403,404,500,503都代表什么状态？
+
+46. http get和post有什么区别？
+
+47. 你怎么理解cookie和session，有哪些不同点？
+
+48. 什么是web缓存？有什么优点？
+
+49. 什么是https，说说https的工作原理？
+
+50. 什么是http代理服务器，有什么用？
+
+51. 什么是虚拟主机及实现原理？
+
+52. 什么是Java虚拟机，为什么要使用？
+
+53. 说说Java虚拟机的生命周期及体系结构。
+
+54. 说一说Java内存区域。
+
+55. 什么是分布式系统？
+
+56. 分布式系统你会考虑哪些方面？
+
+57. 为什么说TCP/IP协议是不可靠的？
+
+58. OSI有哪七层模型？TCP/IP是哪四层模型。
+
+59. TCP协议的三次握手，四次挥手流程。
+
+60. 为什么TCP建立连接协议是三次握手，而关闭连接却是四次握手呢？为什么不能用两次握手进行连接？
+
+61. 为什么TCP TIME_WAIT状态还需要等2MSL后才能返回到CLOSED状态？
+
+62. 什么是DoS、DDoS、DRDoS攻击？如何防御？
+
+63. 描述一下Java异常层次结构。
+
+64. 什么是检查异常，不受检查异常，运行时异常？并分别举例说明。
+
+65. finally块一定会执行吗？
+
+66. 正常情况下，当在try块或catch块中遇到return语句时，finally语句块在方法返回之前还是之后被执行？
+
+67. try、catch、finally语句块的执行顺序。
+
+68. Java虚拟机中，数据类型可以分为哪几类？
+
+69. 怎么理解栈、堆？堆中存什么？栈中存什么？
+
+70. 为什么要把堆和栈区分出来呢？栈中不是也可以存储数据吗？
+
+71. 在Java中，什么是是栈的起始点，同是也是程序的起始点？
+
+72. 为什么不把基本类型放堆中呢？
+
+73. Java中的参数传递时传值呢？还是传引用？
+
+74. Java中有没有指针的概念？
+
+75. Java中，栈的大小通过什么参数来设置？
+
+76. 一个空Object对象的占多大空间？
+
+77. 对象引用类型分为哪几类？
+
+78. 讲一讲垃圾回收算法。
+
+79. 如何解决内存碎片的问题？
+
+80. 如何解决同时存在的对象创建和对象回收问题？
+
+81. 讲一讲内存分代及生命周期。
+
+82. 什么情况下触发垃圾回收？
+
+83. 如何选择合适的垃圾收集算法？
+
+84. JVM有哪三种垃圾回收器？
+
+85. JVM中最大堆大小有没有限制？
+
+86. 如何进行JVM调优？有哪些方法？
+
+87. 堆大小通过什么参数设置？
+
+88. 吞吐量优先选择什么垃圾回收器？响应时间优先呢？
+
+89. 如何理解内存泄漏问题？有哪些情况会导致内存泄露？如何解决？
+
+90. 从分布式系统部署角度考虑，分哪几层？
+
+91. 如何解决业务层的数据访问问题？
+
+92. 为了解决数据库服务器的负担，如何做数据库的分布？
+
+93. 什么是著名的拜占庭将军问题？
+
+94. 讲讲CAP理念。
+
+95. 怎么理解强一致性、单调一致性和最终一致性？
+
+96. 分布式系统设计你会考虑哪些策略？
+
+97. 最常见的数据分布方式是什么？
+
+98. 谈一谈一致性哈希算法。
+
+99. paxos是什么？
+
+100. 什么是Lease机制？
+
+101. 如何理解选主算法？
+
+102. mysql常用的引擎有InnoDB，MyISAM，Memory，默认是InnoDB
+
+     InnoDB：磁盘表，支持事务，支持行级锁，B+Tree索引
+
+     ps:优点： 具有良好的ACID特性。适用于高并发，更新操作比较多的表。需要使用事务的表。对自动灾难恢复有要求的表。
+
+     缺点：读写效率相对MYISAM比较差。占用的磁盘空间比较大。
+
+     mysql的4大特性+4种隔离级别：
+
+     MyISAM：磁盘表，不支持事务，支持表级锁，B+Tree索引
+
+     ps: 优点：占用空间小，处理速度快（相对InnoDB来说）
+
+     缺点：不支持事务的完整性和并发性
+
+     MEMORY(Heap)：内存表，不支持事务，表级锁，Hash索引，不支持Blob,Text大类型
+
+     ps: 优点：速度要求快的，临时数据
+
+     缺点：丢失以后，对项目整体没有或者负面影响不大的时候。
+
+     **2.redis的hash算法用的是啥？**
+
+     redis应该是使用一致性hash算法---MurmurHash3 算法，具有低碰撞率优点，google改进的版本cityhash也是redis中用到的哈希算法。
+
+     现有的主流的大数据系统都是用的 MurmurHash本身或者改进。
+
+     **3.Nosql为啥比sql快？**
+
+     Nosql是非关系型数据库，因为不需要满足关系数据库数据一致性等复杂特性所以速度快；
+
+     SQL是关系型数据库，功能强大，但是效率上有瓶颈。
+
+     **4.什么是索引？**
+
+     索引分为聚簇索引和非聚簇索引两种，聚簇索引是按照数据存放的物理位置为顺序的，而非聚簇索引就不一样了；聚簇索引能提高多行检索的速度，而非聚簇索引对于单行的检索很快。
+
+     聚簇索引：有主键时，根据主键创建聚簇索引；没有主键时，会用一个唯一且不为空的索引列做为主键，成为此表的聚簇索引；如果以上两个都不满足那innodb自己创建一个虚拟的聚集索引
+
+     非聚簇索引：非聚簇索引都是辅助索引，像复合索引、前缀索引、唯一索引。
+
+     **5.B+树和B树区别？**
+
+     B树的非叶子节点存储实际记录的指针，而B+树的叶子节点存储实际记录的指针
+
+     B+树的叶子节点通过指针连起来了, 适合扫描区间和顺序查找。
+
+     1. 线程池的工作原理，几个重要参数？
+     2. 给了具体几个参数，分析线程池会怎么做？
+     3. Java容器有哪些？
+     4. 哪些是同步容器,哪些是并发容器？
+     5. ArrayList和LinkedList的插入和访问的时间复杂度？
+     6. java反射原理，注解原理？
+     7. 新生代分为几个区？使用什么算法进行垃圾回收？为什么使用这个算法？
+     8. HashMap在什么情况下会扩容，有哪些操作会导致扩容？
+     9. HashMap push方法的执行过程？
+     10. HashMap检测到hash冲突后，将元素插入在链表的末尾还是开头？
+     11. 1.8还采用了红黑树，讲讲红黑树的特性，为什么人家一定要用红黑树而不是AVL、B树之类的？
+     12. https和http区别，有没有用过其他安全传输手段？
+     13. linux怎么查看系统负载情况？
+     14. 讲一讲AtomicInteger，为什么要用CAS而不是synchronized？
+     15. 请详细描述springmvc处理请求全流程？
+     16. spring 一个bean装配的过程？
+     17. 项目用 Spring 比较多，有没有了解 Spring 的原理？
+     18. AOP 和 IOC 的原理？查询中哪些情况不会使用索引？
+     19. 数据库索引，底层是怎样实现的，为什么要用B树索引？
+     20. Mysql主从同步的实现原理？
+     21. MySQL是怎么用B+树？
+     22. 谈谈数据库乐观锁与悲观锁?
+     23. 有使用过哪些NoSQL数据库？MongoDB和Redis适用哪些场景？
+     24. 描述分布式事务之TCC服务设计？
+     25. Redis和memcache有什么区别？Redis为什么比memcache有优势？
+     26. 考虑redis的时候，有没有考虑容量？大概数据量会有多少？
 
