--- a/面试题.md
+++ b/面试题.md
@@ -45,3 +45,46 @@ https://www.jianshu.com/p/85d181d7d09a
 
 https://blog.csdn.net/Dongguabai/article/details/80865599
 
+# 8 java注解
+
+https://blog.csdn.net/yuzongtao/article/details/83306182
+
+# 9 千万级数据量主键，单据号生成
+
+https://bbs.csdn.net/topics/260075534
+
+https://blog.csdn.net/jiabeis/article/details/80999498
+
+雪花算法
+
+https://blog.csdn.net/u012516166/article/details/76559526
+
+# 10 数据库索引
+
+https://www.cnblogs.com/phpdragon/p/8231533.html
+
+https://blog.csdn.net/tongdanping/article/details/79878302
+
+主键索引、唯一索引、普通索引、全文索引（FULLTEXT，不能使用like）、组合索引
+
+```sql
+SELECT * FROM table_name MATCH(ft_index) AGAINST('查询字符串');
+```
+
+
+
+# 11 生产者消费者模式
+
+https://www.cnblogs.com/luego/p/12048857.html
+
+https://blog.csdn.net/sanyuesan0000/article/details/52996586
+
+java实现：
+
+https://blog.csdn.net/shadowcw/article/details/82352829
+
+
+
+# 12 设计模式
+
+https://www.javazhiyin.com/zx/sjms/page/6
