--- a/面试题.md
+++ b/面试题.md
@@ -88,3 +88,91 @@ https://blog.csdn.net/shadowcw/article/details/82352829
 # 12 设计模式
 
 https://www.javazhiyin.com/zx/sjms/page/6
+
+
+
+# 13 两个线程交替打印1-100
+
+```java
+public class PrintNum {
+    private static Object lock = new Object();
+    private static volatile int num = 0;
+    public class PrintThread implements Runnable{
+        @Override
+        public void run() {
+            synchronized (lock){
+                while (num < 100){
+                    System.out.println(Thread.currentThread().getName() + "打印：" + ++num);
+                    lock.notifyAll();
+                    try {
+                        lock.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+            }
+        }
+    }
+
+    @Test
+    public void test(){java
+        new Thread(new PrintThread(),"thread1").start();
+        new Thread(new PrintThread(),"thread2").start();
+    }
+}
+```
+
+# 14 链表反转
+
+```Java
+public class Reverse {
+    //单链表
+    static class ListNode{
+        int val;
+        ListNode next;
+        public ListNode(int val){
+            this.val=val;
+        }
+    }
+    //翻转方法
+    public static ListNode reverse(ListNode head){
+        //指定当前节点的前驱
+        ListNode pre=null;
+        //当前节点
+        ListNode cur=head;
+        //当前节点的后继
+        ListNode next=null;
+        //因为这里每次执行后都是将next赋给了cur，所以需要判断cur
+        while (cur!=null){
+            //保存当前节点的后继
+            next=cur.next;
+            //将当前节点后继改成前驱，这也是翻转最重要的一步，头结点的后继应该为空
+            cur.next=pre;
+            //依次向后移动一个单位，执行完成后，pre指的是翻转前最后的节点，也就是翻转后的头结点
+            pre=cur;
+            cur=next;
+        }
+        return pre;
+    }
+    public static void main(String[] args) {
+        ListNode node1 = new ListNode(1);
+        ListNode node2 = new ListNode(2);
+        ListNode node3 = new ListNode(3);
+        ListNode node4 = new ListNode(4);
+        ListNode node5 = new ListNode(5);
+        ListNode node6 = new ListNode(6);
+        node1.next=node2;
+        node2.next=node3;
+        node3.next=node4;
+        node4.next=node5;
+        node5.next=node6;
+        ListNode reverse = reverse(node1);
+        while (reverse!=null){
+            System.out.println(reverse.val);
+            reverse=reverse.next;
+        }
+    }
+```
+
+# 15 linux 常用操作命令
+
