--- a/面试题.md
+++ b/面试题.md
@@ -176,3 +176,22 @@ public class Reverse {
 
 # 15 linux 常用操作命令
 
+https://www.cnblogs.com/banjinbaijiu/p/9140460.html
+
+# 16 Mybatis mapper动态代理的原理详解
+
+https://www.cnblogs.com/hopeofthevillage/p/11384848.html
+
+
+
+# 17 线程隔离 ThreadLocal
+
+https://www.cnblogs.com/beatIteWeNerverGiveUp/p/5950440.html
+
+# 18 Dubbo原理简述一：RPC原理和Netty通信原理
+
+https://blog.csdn.net/qq_33404395/article/details/86497215
+
+# 19 最全面的阿里多线程面试题，你能回答几个？
+
+https://blog.csdn.net/qq_20499001/article/details/99978083
