--- a/面试题.md
+++ b/面试题.md
@@ -195,3 +195,7 @@ https://blog.csdn.net/qq_33404395/article/details/86497215
 # 19 最全面的阿里多线程面试题，你能回答几个？
 
 https://blog.csdn.net/qq_20499001/article/details/99978083
+
+# 21 Java中的常量类缓存机制
+
+https://cloud.tencent.com/developer/article/1451236
