--- a/面试题.md
+++ b/面试题.md
@@ -199,3 +199,20 @@ https://blog.csdn.net/qq_20499001/article/details/99978083
 # 21 Java中的常量类缓存机制
 
 https://cloud.tencent.com/developer/article/1451236
+
+
+
+zk协议，选举
+JVM，类加载，java->jvm中，垃圾回收器
+
+同步锁实现，与Lock的区别 1.8中的优化，可重入锁，偏向锁
+
+https://www.cnblogs.com/my376908915/p/6757833.html
+
+cureentHashMaP实现；1.8后的优化
+
+https://www.jianshu.com/p/e694f1e868ec
+
+hashMap中链表转红黑树条件 长度8，达到阀值
+
+Redis集群
