--- a/面试题.md
+++ b/面试题.md
@@ -200,19 +200,34 @@ https://blog.csdn.net/qq_20499001/article/details/99978083
 
 https://cloud.tencent.com/developer/article/1451236
 
-
-
-zk协议，选举
-JVM，类加载，java->jvm中，垃圾回收器
-
-同步锁实现，与Lock的区别 1.8中的优化，可重入锁，偏向锁
+# 22 同步锁实现，与Lock的区别 1.8中的优化，可重入锁，偏向锁
 
 https://www.cnblogs.com/my376908915/p/6757833.html
 
-cureentHashMaP实现；1.8后的优化
+https://www.cnblogs.com/linghu-java/p/8944784.html
+
+https://www.pianshen.com/article/3799167501/
+
+https://www.pianshen.com/article/3799167501/
+
+# 23 HashMap中链表转红黑树条件 长度8，达到阀值
+
+https://www.pianshen.com/article/8845315407/
+
+# 24 cureentHashMaP实现；1.8后的优化
+
+
 
 https://www.jianshu.com/p/e694f1e868ec
 
-hashMap中链表转红黑树条件 长度8，达到阀值
+# 25 数据库索引
 
-Redis集群
+# 26 JVM，类加载，java->jvm中，垃圾回收器
+
+
+
+# 27 zk协议，选举
+
+
+
+# 28 Redis集群
