--- a/面试题.md
+++ b/面试题.md
@@ -231,3 +231,73 @@ https://www.jianshu.com/p/e694f1e868ec
 
 
 # 28 Redis集群
+
+
+
+# 29 链表
+
+https://blog.csdn.net/weixin_41445507/article/details/89074868
+
+https://blog.csdn.net/qq_41027326/article/details/79787434
+
+https://www.jianshu.com/p/81a6ed0abeb8
+
+https://blog.csdn.net/qq_41966475/article/details/105217145
+
+https://blog.csdn.net/qq_15720911/article/details/76945226?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.control
+
+
+
+https://blog.csdn.net/u010442302/article/details/51864187?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-1.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-1.control
+
+
+
+# 30 osi七层模型从下到上分别为：
+
+1、物理层：建立、维bai护、断开物理连接。
+
+TCP/IP 层级模型结构，应用层之间的协议通过逐级调用传输层（Transport layer）、网络层（Network Layer）和物理数据链路层（Physical Data Link）而可以实现应用层的应用程序通信互联。
+
+2、数据链路层：建立逻辑连接、进行硬件地址寻址、差错校验等功能。
+
+将比特组合成字节进而组合成帧，用MAC地址访问介质，错误发现但不能纠正。
+
+3、网络层：进行逻辑地址寻址，实现不同网络之间的路径选择。
+
+协议有：ICMP、IGMP、IP（IPV4 IPV6）、ARP、RARP。
+
+
+
+4、传输层：定义传输数据的协议端口号，以及流控和差错校验。
+
+协议有：TCP UDP，数据包一旦离开网卡即进入网络传输层。
+
+5、会话层：建立、管理、终止会话。
+
+对应主机进程，指本地主机与远程主机正在进行的会话。
+
+6、表示层：数据的表示、安全、压缩。
+
+格式有JPEG、ASCll、DECOIC、加密格式等。
+
+7、应用层：网络服务与最终用户的一个接口。
+
+协议有：HTTP、FTP、TFTP、SMTP、SNMP、DNS、TELNET、HTTPS、POP3、DHCP
+
+https://zhidao.baidu.com/question/571359857.html
+
+# 31 详细说一下一个浏览器发出去一个请求都经过了那些步骤
+
+https://www.cnblogs.com/xsj1/p/11202277.html
+
+https://www.cnblogs.com/windy-xmwh/p/9296253.html
+
+https://blog.csdn.net/wnx_52055/article/details/88353441?utm_medium=distribute.pc_relevant.none-task-blog-title-15&spm=1001.2101.3001.4242
+
+# 32 阿里面试题
+
+https://www.jb51.net/it/667282.html
+
+# 33 中移面试
+
+https://www.nowcoder.com/discuss/303907?type=2&order=3&pos=5&page=1&channel=-2&source_id=discuss_tag
