--- a/面试题.md
+++ b/面试题.md
@@ -301,3 +301,9 @@ https://www.jb51.net/it/667282.html
 # 33 中移面试
 
 https://www.nowcoder.com/discuss/303907?type=2&order=3&pos=5&page=1&channel=-2&source_id=discuss_tag
+
+
+
+# 34 java 灰度值，二值化，查找，极值
+
+https://www.cnblogs.com/zjut-jiangnan/p/3619288.html
