--- a/面试题.md
+++ b/面试题.md
@@ -307,3 +307,275 @@ https://www.nowcoder.com/discuss/303907?type=2&order=3&pos=5&page=1&channel=-2&s
 # 34 java 灰度值，二值化，查找，极值
 
 https://www.cnblogs.com/zjut-jiangnan/p/3619288.html
+
+# 35 HashMap的链表数据结构是用来解决什么问题的
+
+https://www.cnblogs.com/weigy/p/12572569.html
+
+解决哈希冲突。
+
+1、JDK1.7的HashMap是由数组+链表构成的，新增一个数通过哈希算法，计算出对应存放在数组的某个位置，如果这个位置已经存在数据了，也就是说存在了哈希冲突，这时候JDK1.7就将新增的数和原来的数构成一个链表放在数组这个位置，后面冲突的数依次都放入链表中。
+2、通常解决哈希冲突有两种办法，上面所说的通过链表的形式称为链地址法；
+还有一种方法称为开放地址法，也就是说如果存在哈希冲突了，那么将新增的值在用一个新的哈希算法算出所存的位置插入，但是这还会构成二次冲突，三次冲突.....
+
+3、JDK1.8的HashMap是由数组+链表+红黑树构成，
+当链表长度超过8会自动转换成红黑树，红黑树节点个数小于6，又自动转换为链表。这是为了提高检索效率（红黑树检索效率明显是高于链表的）
+
+# 36 哈希冲突及四种解决方法
+
+https://www.cnblogs.com/higerMan/p/11907117.html
+
+# 37 深入分析AQS实现原理
+
+AQS是一个用来构建锁和同步器的框架
+
+**AQS核心思想是，如果被请求的共享资源空闲，则将当前请求资源的线程设置为有效的工作线程，并且将共享资源设置为锁定状态。如果被请求的共享资源被占用，那么就需要一套线程阻塞等待以及被唤醒时锁分配的机制，这个机制AQS是用CLH队列锁实现的，即将暂时获取不到锁的线程加入到队列中**
+
+https://segmentfault.com/a/1190000017372067
+
+# 38  CycliBarriar 和 CountdownLatch 有什么区别？
+
+CountDownLatch与CyclicBarrier都是用于控制并发的工具类，都可以理解成维护的就是一个计数器，但是这两者还是各有不同侧重点的：
+
+- CountDownLatch一般用于某个线程A等待若干个其他线程执行完任务之后，它才执行；而CyclicBarrier一般用于一组线程互相等待至某个状态，然后这一组线程再同时执行；CountDownLatch强调一个线程等多个线程完成某件事情。CyclicBarrier是多个线程互等，等大家都完成，再携手共进。
+- 调用CountDownLatch的countDown方法后，当前线程并不会阻塞，会继续往下执行；而调用CyclicBarrier的await方法，会阻塞当前线程，直到CyclicBarrier指定的线程全部都到达了指定点的时候，才能继续往下执行；
+- CountDownLatch方法比较少，操作比较简单，而CyclicBarrier提供的方法更多，比如能够通过getNumberWaiting()，isBroken()这些方法获取当前多个线程的状态，并且CyclicBarrier的构造方法可以传入barrierAction，指定当所有线程都到达时执行的业务功能；
+- CountDownLatch是不能复用的，而CyclicLatch是可以复用的。
+
+# 39 2019年BAT常问面试题汇总：JVM+微服务+多线程+锁+高并发性能
+
+https://cloud.tencent.com/developer/article/1557077
+
+# 40 Volatile可见性、缓存一致性协议、指令重排、内存屏障 、总线风暴
+
+https://blog.csdn.net/sinat_42483341/article/details/106592833
+
+https://www.cnblogs.com/amei0/p/8378625.html
+
+https://www.cnblogs.com/baizhanshi/p/6422926.html
+
+https://blog.csdn.net/li12127878/article/details/101001128
+
+https://www.cnblogs.com/jiagoujishu/p/13744544.html
+
+# 41 mysql索引
+
+https://www.cnblogs.com/bypp/p/7755307.html
+
+https://blog.csdn.net/u013308490/article/details/83001060
+
+https://www.jianshu.com/p/d90f6b028d0e
+
+https://baijiahao.baidu.com/s?id=1661980510559470562&wfr=spider&for=pc
+
+# 42 count(1) 和count(*) 的区别
+
+count(1)与count(*)比较： 
+
+如果你的数据表没有主键，那么count(1)比count(*)快 
+
+如果有主键的话，那主键（联合主键）作为count的条件也比count(*)要快 
+
+如果你的表只有一个字段的话那count(*)就是最快的啦 
+
+count(*) count(1) 两者比较。主要还是要count(1)所相对应的数据字段。 
+
+如果count(1)是聚索引,id,那肯定是count(1)快。但是差的很小的。 
+
+因为count(*),自动会优化指定到那一个字段。所以没必要去count(?)，用count(*),sql会帮你完成优化的
+
+ count详解：
+
+count(*)将返回表格中所有存在的行的总数包括值为null的行，然而count(列名)将返回表格中除去null以外的所有行的总数(有默认值的列也会被计入）.
+
+distinct 列名,得到的结果将是除去值为null和重复数据后的结果
+
+https://blog.csdn.net/szstephenzhou/article/details/8446481
+
+https://blog.csdn.net/haijiege/article/details/85006780
+
+# 43 行锁和表锁的区别
+
+https://www.cnblogs.com/ngrzr/p/11906710.html
+
+## 43.1 行锁
+
+1、支持的存储引擎：Innodb；
+
+2、InnoDB行锁是通过给索引上的索引项加锁来实现的，意味着：只有通过索引条件检索数据，InnoDB才使用行级锁，否则，InnoDB将使用表锁！
+
+3、适用场景：有大量按索引条件并发更新少量不同数据，同时又有并发查询的应用
+
+4、特点：开销大，加锁慢；会出现死锁；锁定粒度小，发生锁冲突的概率低，并发度高
+
+5、分析：show status like 'innodb_row_lock%';分析系统上行锁的争夺情况如果发现锁争用比较严重，如InnoDB_row_lock_waits和InnoDB_row_lock_time_avg的值比较高，还可以通过设置InnoDB Monitors来进一步观察发生锁冲突的表、数据行等，并分析锁争用的原因。
+
+## 43.2 表锁
+
+1、支持的存储引擎：Innodb、MYIsam
+
+2、适用场景：以查询为主，只有少量按索引条件更新数据的应用
+
+3、特点：开销小，加锁快；不会出现死锁；锁定力度大，发生锁冲突概率高，并发度最低
+
+4、两种模式：
+
+ • 表共享读锁
+
+ • 表独占写锁
+
+5、对两张表显示加锁、解锁
+
+ Lock tables orders read local, order_detail read local;
+
+ Select sum(total) from orders;
+
+ Select sum(subtotal) from order_detail;
+
+ Unlock tables;
+
+6、MyISAM在执行查询语句（SELECT）前，会自动给涉及的所有表加读锁，在执行更新操作（UPDATE、DELETE、INSERT等）前，会自动给涉及的表加写锁
+
+# 44 mysql普通索引与唯一索引区别
+
+https://blog.csdn.net/qq_36918149/article/details/96704830
+
+# 45 InnoDB中的页合并与分裂
+
+https://blog.csdn.net/qq_35045184/article/details/104346594
+
+# 46 对B+树，B树，红黑树的理解
+
+https://www.cnblogs.com/myseries/p/10662710.html
+
+**区别有以下两点：**
+
+1. B+树中只有叶子节点会带有指向记录的指针，而B树则所有节点都带有，在内部节点出现的索引项不会再出现在叶子节点中。
+2. B+树中所有叶子节点都是通过指针连接在一起，而B树不会。
+
+**B+树的优点：**
+
+1. **非叶子节点不会带上指向记录的指针，这样，一个块中可以容纳更多的索引项，**一是可以降低树的高度。二是一个内部节点可以定位更多的叶子节点。
+2. 叶子节点之间通过指针来连接，范围扫描将十分简单，而对于B树来说，则需要在叶子节点和内部节点不停的往返移动。**具体的来讲，如何想扫描一次所有数据，对于b+树来说，可以从因为他们的叶子结点是连在一起的，所以可以横向的遍历过去。而对于b-树来说，就这能中序遍历了。**
+
+**B树的优点：**
+对于在内部节点的数据，可直接得到，不必根据叶子节点来定位
+
+**红黑树的规则：**
+1）每个结点要么是红的，要么是黑的。
+2）根结点是黑的。
+3）每个叶结点（叶结点即指树尾端NIL指针或NULL结点）是黑的。
+4）如果一个结点是红的，那么它的俩个儿子都是黑的。
+5）对于任一结点而言，其到叶结点树尾端NIL指针的每一条路径都包含相同数目的黑结点
+
+###### 红黑树 和 b+树的用途有什么区别？
+
+1. 红黑树多用在内部排序，即全放在内存中的，STL的map和set的内部实现就是红黑树。
+2. B+树多用于外存上时，B+也被成为一个磁盘友好的数据结构。
+
+# 47可达性算法分析中根节点有哪些
+
+https://blog.csdn.net/u012501054/article/details/97773322
+
+那么问题又来了，如何选取GCRoots对象呢？在Java语言中，可以作为GCRoots的对象包括下面几种：
+
+(1). 虚拟机栈（栈帧中的局部变量区，也叫做局部变量表）中引用的对象。
+
+(2). 方法区中的类静态属性引用的对象。
+
+(3). 方法区中常量引用的对象。
+
+(4). 本地方法栈中JNI(Native方法)引用的对象。
+
+# 48 CMS 和G1 的区别
+
+https://www.jianshu.com/p/ab54489f5d71
+
+### 区别一： 使用范围不一样
+
+CMS收集器是老年代的收集器，可以配合新生代的Serial和ParNew收集器一起使用
+ G1收集器收集范围是老年代和新生代。不需要结合其他收集器使用
+
+### 区别二： STW的时间
+
+CMS收集器以最小的停顿时间为目标的收集器。
+
+G1收集器可预测垃圾回收的停顿时间（建立可预测的停顿时间模型）
+
+### 区别三： 垃圾碎片
+
+CMS收集器是使用“标记-清除”算法进行的垃圾回收，容易产生内存碎片
+
+G1收集器使用的是“标记-整理”算法，进行了空间整合，降低了内存空间碎片。
+
+### 区别四： 垃圾回收的过程不一样
+
+![img](https:////upload-images.jianshu.io/upload_images/10819106-3ada1f0a939574ef.png?imageMogr2/auto-orient/strip|imageView2/2/w/672/format/webp)
+
+
+
+# 49 JVM 配置常用参数和常用 GC 调优策略
+
+https://blog.csdn.net/An1090239782/article/details/95098712
+
+**GC 调优策略**
+
+策略 1：
+
+> 将新对象预留在新生代，由于 Full GC 的成本远高于 Minor GC，因此尽可能将对象分配在新生代是明智的做法，实际项目中根据 GC
+> 日志分析新生代空间大小分配是否合理，适当通过“-Xmn”命令调节新生代大小，最大限度降低新对象直接进入老年代的情况。
+
+策略 2：
+
+> 大对象进入老年代，虽然大部分情况下，将对象分配在新生代是合理的。但是对于大对象这种做法却值得商榷，大对象如果首次在新生代分配可能会出现空间不足导致很多年龄不够的小对象被分配的老年代，破坏新生代的对象结构，可能会出现频繁的
+> full
+> gc。因此，对于大对象，可以设置直接进入老年代（当然短命的大对象对于垃圾回收老说简直就是噩梦）。-XX:PretenureSizeThreshold
+> 可以设置直接进入老年代的对象大小。
+
+策略 3：
+
+> 合理设置进入老年代对象的年龄，-XX:MaxTenuringThreshold 设置对象进入老年代的年龄大小，减少老年代的内存占用，降低
+> full gc 发生的频率。
+
+策略 4：
+
+> 设置稳定的堆大小，堆大小设置有两个参数：-Xms 初始化堆大小，-Xmx 最大堆大小。
+
+策略5：
+
+> 注意：如果满足下面的指标，则一般不需要进行 GC 优化：
+> MinorGC 执行时间不到50ms；
+> Minor GC 执行不频繁，约10秒一次；
+> Full GC 执行时间不到1s；
+> Full GC 执行频率不算频繁，不低于10分钟1次。
+
+# 50 排查Java高CPU占用及内存飙升原因
+
+https://www.cnblogs.com/cnndevelop/p/11091813.html
+
+https://blog.csdn.net/qq_34944965/article/details/81107419
+
+https://blog.csdn.net/weixin_30323961/article/details/95639909
+
+1、先通过top命令找到消耗cpu很高的进程id假设是123
+
+2、执行top -p 123单独监控该进程
+
+3、在第2步的监控界面输入H，获取当前进程下的所有线程信息
+
+4、找到消耗cpu特别高的线程编号，假设是123
+
+5、执行jstack 123456对当前的进程做dump，输出所有的线程信息
+
+6 将第4步得到的线程编号11354转成16进制是0x7b
+
+7 根据第6步得到的0x7b在第5步的线程信息里面去找对应线程内容
+
+8 解读线程信息，定位具体代码位置
+
+# 51 排查Java 逃逸分析
+
+https://blog.csdn.net/hollis_chuang/article/details/80922794
+
+https://www.cnblogs.com/javastack/p/11023044.html
+
