--- a/面试题.md
+++ b/面试题.md
@@ -1291,3 +1291,6 @@ Random LoadBalance
 
 如上，Dubbo本身提供了丰富的集群容错模式，但是如果您有定制化需求，可以根据Dubbo提供的扩展接口Cluster进行定制。在后面的消费方启动流程章节会讲解何时/如何使用的集群容错。
 
+# 81 Spring Bean的作用域(Scope)的原理及源码解析
+
+https://blog.csdn.net/qq_27529917/article/details/78468731
