--- a/面试题.md
+++ b/面试题.md
@@ -196,9 +196,13 @@ https://blog.csdn.net/qq_33404395/article/details/86497215
 
 https://blog.csdn.net/qq_20499001/article/details/99978083
 
-# 21 Java中的常量类缓存机制
+# 21 Java中的常量类缓存机制及String：字符串常量池
 
 https://cloud.tencent.com/developer/article/1451236
+
+https://segmentfault.com/a/1190000009888357
+
+https://www.cnblogs.com/javaminer/p/3923484.html
 
 # 22 同步锁实现，与Lock的区别 1.8中的优化，可重入锁，偏向锁
 
@@ -1294,3 +1298,149 @@ Random LoadBalance
 # 81 Spring Bean的作用域(Scope)的原理及源码解析
 
 https://blog.csdn.net/qq_27529917/article/details/78468731
+
+# 82 字符串常量池和运行时常量池是在堆还是在方法区？
+
+https://www.cnblogs.com/cosmos-wong/p/12925299.html#autoid-0-0-0
+
+# 83 Java 多态
+
+https://www.cnblogs.com/chenssy/p/3372798.html
+
+https://www.cnblogs.com/feicheninfo/p/9669137.html
+
+# 84 Java 反射
+
+https://www.jianshu.com/p/9be58ee20dee
+
+https://blog.csdn.net/qq_36226453/article/details/82790375
+
+https://www.cnblogs.com/adamjwh/p/9683705.html
+
+https://blog.csdn.net/grandgrandpa/article/details/84832343
+
+# 85 Java NIO
+
+https://www.cnblogs.com/aspirant/p/8630283.html
+
+# 86 Java 网络学习--https
+
+https://blog.csdn.net/xiaoliuliu2050/article/details/54730191
+
+# 87 Java 网络学习--TCP 三次握手、四次挥手
+
+为啥不是两次握手
+
+为啥不是三次挥手
+
+https://blog.csdn.net/jun2016425/article/details/81506353
+
+https://blog.csdn.net/O9A0MA/article/details/90731748
+
+# 88 进程与线程的区别
+
+https://m.sohu.com/a/317928043_120047065
+
+# 89 多线程CPU占用太高怎么办、怎么在Linux环境下排查及怎么排查出那个进程问题
+
+grep:http://www.zsythink.net/archives/1733
+
+# 90 多线程中Future与FutureTask的区别和联系
+
+https://blog.csdn.net/sx1119183530/article/details/79735348
+
+# 91 sleep和wait的区别
+
+https://xcx.topsage.com/10195.html
+
+# 92 怎么获取当前运行线程
+
+
+
+# 93 多线程中condition 
+
+https://www.cnblogs.com/gemine/p/9039012.html
+
+# 94 Java中interrupt、interrupted和isInterrupted的关系与区别
+
+https://blog.csdn.net/smiles13/article/details/81292608
+
+# 95 同步锁及ReentrantLock原理
+
+https://blog.csdn.net/fuyuwei2015/article/details/83719444
+
+# 96 什么是AQS
+
+https://blog.csdn.net/mulinsen77/article/details/84583716
+
+# 97 深度解析：读写锁原理
+
+https://blog.csdn.net/qq_37685457/article/details/89855519
+
+# 98 java经典讲解-静态代理和动态代理的区别及jdk动态代理与CGlib动态代理区别
+
+https://blog.csdn.net/fangqun663775/article/details/78960545
+
+https://www.cnblogs.com/bopo/p/9402087.html
+
+# 99 什么是垃圾回收CMS
+
+https://www.cnblogs.com/bootdo/p/10482853.html
+
+# 100 注册中心
+
+https://blog.csdn.net/liu_ares/article/details/109906920
+
+# 101 数据库
+
+https://mp.weixin.qq.com/s/Bk6lP9NDGb2oAq3kS6bOsA
+
+# 102 线程池
+
+https://mp.weixin.qq.com/s/g3dSai5--dcrEOy9trkZWA
+
+# 103 Spring的事务隔离性与传播行为及实现
+
+https://mbd.baidu.com/ma/s/icwluhdx
+
+# 104 springBoot的自动装配
+
+
+
+# 105 SpringBoot的actuator及devsTools
+
+https://blog.csdn.net/pengjunlee/article/details/80235390
+
+https://www.jianshu.com/p/14d10481845e
+
+# 106 springBoot单元测试
+
+# 107 spring发现未注册的bean如何处理
+
+
+
+# 108 MyBatis框架的优缺点及其适用场合
+
+https://blog.csdn.net/u014788653/article/details/68489301
+
+# 109 Mybatis工作原理
+
+https://blog.csdn.net/u014745069/article/details/80788127
+
+https://blog.csdn.net/u014297148/article/details/78696096
+
+# 110 什么是mybatis动态sql
+
+https://m.php.cn/faq/418516.html
+
+# 111 Mybatis延迟加载的实现方式
+
+https://www.jb51.net/article/172739.htm
+
+https://www.cnblogs.com/programb/p/12687039.html
+
+# 112 mybatis 插件原理
+
+https://mbd.baidu.com/ma/s/0sTNa4v1
+
+https://www.cnblogs.com/qdhxhz/p/11390778.html
